# glau

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  triangle.cc
include/glau/: glaufw.hh  glaugl.hh
include/glau/glaufw/: _fwd.hh  context.hh  glfw.hh  window.hh
include/glau/glaugl/: _def.hh  _fwd.hh  _util.hh  program.hh  shader.hh  vao.hh  vbo.hh
src/glaufw/: CMakeLists.txt  context.cc  glfw.cc  sources.cmake  window.cc
src/glaugl/: CMakeLists.txt  program.cc  sources.cmake
